tests/spec/format/snapshots/line_breaking_wide_character_slice.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn main() {
    let weekdays = ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"]
    let ascii = ["aaaaaaa", "bbbbbbb", "ccccccc", "ddddddd", "eeeeeee", "fffffff", "ggggggg"]
  }
---
fn main() {
  let weekdays = [
    "日曜日",
    "月曜日",
    "火曜日",
    "水曜日",
    "木曜日",
    "金曜日",
    "土曜日",
  ]
  let ascii = [
    "aaaaaaa",
    "bbbbbbb",
    "ccccccc",
    "ddddddd",
    "eeeeeee",
    "fffffff",
    "ggggggg",
  ]
}
