tests/spec/format/snapshots/literal_bool.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { true }"
---
fn test() {
  true
}
