tests/spec/format/snapshots/literal_char.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 'a' }"
---
fn test() {
  'a'
}
