tests/spec/format/snapshots/literal_float.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 3.14 }"
---
fn test() {
  3.14
}
