tests/spec/format/snapshots/literal_float_scientific_notation.snap
---
source: tests/spec/format/mod.rs
description: const MaxFloat64 = 1.7976931348623157e+308
---
const MaxFloat64 = 1.7976931348623157e+308
