tests/spec/format/snapshots/literal_float_trailing_zero.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 0.0 }"
---
fn test() {
  0.0
}
