tests/spec/format/snapshots/literal_float_whole_number.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { 6.0 }"
---
fn test() {
  6.0
}
