tests/spec/format/snapshots/literal_string.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { \"hello world\" }"
---
fn test() {
  "hello world"
}
