tests/spec/format/snapshots/literal_string_with_escapes.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { \"hello\\nworld\\t!\" }"
---
fn test() {
  "hello\nworld\t!"
}
