tests/spec/format/snapshots/loop_break.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { loop { break } }"
---
fn test() {
  loop {
    break
  }
}
