tests/spec/format/snapshots/match_multiline.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
      match x {
          Some(a) => a,
          None => 0,
      }
  }
---
fn test() {
  match x {
    Some(a) => a,
    None => 0,
  }
}
